// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Gallery [Gallery - disabled: false] Component basic tests matches the snapshot 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  overflow-x: hidden;
  position: relative;
  left: 0px;
  right: 0px;
  margin: 0px 10px;
}

.c0::after {
  content: '';
  -webkit-box-flex: 999999999;
  -webkit-flex-grow: 999999999;
  -ms-flex-positive: 999999999;
  flex-grow: 999999999;
  height: 0;
}

.c2 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-width: 500px;
  width: 100%;
  height: 100%;
}

.c1 {
  margin: 1px;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  overflow: hidden;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 200px;
  pointer-events: initial;
}

.c3 {
  background-color: rgba(0,0,0,0.05);
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  height: 100%;
}

.c3::before {
  border: .25rem solid rgba(0,0,0,0.3);
  -webkit-animation: 4s infinite spin linear;
  animation: 4s infinite spin linear;
}

.c3::before,
.c3::after {
  content: '';
  position: absolute;
  width: 2rem;
  height: 2rem;
  border-right-color: transparent;
  border-left-color: transparent;
  border-radius: 50%;
}

@media only screen and (max-width:600px) {
  .c2 {
    min-width: 200px;
  }
}

@media only screen and (max-width:600px) {
  .c1 {
    height: 100px;
  }
}

<div
  className="c0"
>
  <div
    className="c1"
    disabled={false}
  >
    <div
      className="c2"
    >
      <div
        className="c3"
      />
    </div>
  </div>
</div>
`;

exports[`Gallery [Gallery - disabled: true] Component basic tests matches the snapshot 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  overflow-x: hidden;
  position: relative;
  left: 0px;
  right: 0px;
  margin: 0px 10px;
}

.c0::after {
  content: '';
  -webkit-box-flex: 999999999;
  -webkit-flex-grow: 999999999;
  -ms-flex-positive: 999999999;
  flex-grow: 999999999;
  height: 0;
}

.c2 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-width: 500px;
  width: 100%;
  height: 100%;
}

.c1 {
  margin: 1px;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  overflow: hidden;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 200px;
  pointer-events: none;
}

.c3 {
  background-color: rgba(0,0,0,0.05);
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  height: 100%;
}

.c3::before {
  border: .25rem solid rgba(0,0,0,0.3);
  -webkit-animation: 4s infinite spin linear;
  animation: 4s infinite spin linear;
}

.c3::before,
.c3::after {
  content: '';
  position: absolute;
  width: 2rem;
  height: 2rem;
  border-right-color: transparent;
  border-left-color: transparent;
  border-radius: 50%;
}

@media only screen and (max-width:600px) {
  .c2 {
    min-width: 200px;
  }
}

@media only screen and (max-width:600px) {
  .c1 {
    height: 100px;
  }
}

<div
  className="c0"
>
  <div
    className="c1"
    disabled={true}
  >
    <div
      className="c2"
    >
      <div
        className="c3"
      />
    </div>
  </div>
</div>
`;

exports[`Gallery [empty Gallery - disabled: false] Component basic tests matches the snapshot 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  overflow-x: hidden;
  position: relative;
  left: 0px;
  right: 0px;
  margin: 0px 10px;
}

.c0::after {
  content: '';
  -webkit-box-flex: 999999999;
  -webkit-flex-grow: 999999999;
  -ms-flex-positive: 999999999;
  flex-grow: 999999999;
  height: 0;
}

<div
  className="c0"
/>
`;

exports[`Gallery [empty Gallery - disabled: true] Component basic tests matches the snapshot 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  overflow-x: hidden;
  position: relative;
  left: 0px;
  right: 0px;
  margin: 0px 10px;
}

.c0::after {
  content: '';
  -webkit-box-flex: 999999999;
  -webkit-flex-grow: 999999999;
  -ms-flex-positive: 999999999;
  flex-grow: 999999999;
  height: 0;
}

<div
  className="c0"
/>
`;
